--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,11 @@
+2014-11-18  Daiki Ueno  <ueno@gnu.org>
+
+	* read-mo.c: Include "xsize.h".
+	(get_string): Use xsum3 to avoid overflow, when checking length
+	and offset fields.
+	Reported by Jakub Wilk at:
+	<https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=769901>.
+
 2014-10-28  Daiki Ueno  <ueno@gnu.org>
 
 	xgettext: Allow plural extraction from a single argument function
