--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,10 @@
+2014-11-18  Daiki Ueno  <ueno@gnu.org>
+
+	tests: Add test for integer overflow when reading MO file
+	* msgunfmt-3: New file.
+	* Makefile.am (TESTS): Add new test.
+	(EXTRA_DIST): Add data file for msgunfmt-3.
+
 2014-10-28  Daiki Ueno  <ueno@gnu.org>
 
 	xgettext: Allow plural extraction from a single argument function
