--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-03  Daiki Ueno  <ueno@gnu.org>
+
+	* extern-inline.m4, iconv.m4: Update from Gnulib.
+
 2014-10-15  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.3 released.
