--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-04  Daiki Ueno  <ueno@gnu.org>
+
+	intl: Make the LCOV workaround non-intrusive
+	* configure.ac: Replace PLURAL_OBJECT in intl/Makefile.
+
 2014-10-15  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.3 released.
