--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,11 @@
+2014-12-05  Daiki Ueno  <ueno@gnu.org>
+
+	msgunfmt: Avoid integer overflow using xsize
+	* read-mo.c (get_uint32, get_sysdep_string): Use xsum to avoid
+	integer overflow, when checking length and offset fields.
+	Reported by Jakub Wilk at:
+	<https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=772088>.
+
 2014-12-04  Daiki Ueno  <ueno@gnu.org>
 
 	libgettextsrc: Follow plural.c -> pluralx.c file name change
