--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-09  Daiki Ueno  <ueno@gnu.org>
+
+	tests: Improve test coverage of Desktop scanner
+	* xgettext-desktop-1: Test invalid input and blank lines.
+
 2014-12-07  Daiki Ueno  <ueno@gnu.org>
 
 	tests: Improve test coverage of Vala scanner
