vala: Simplify the parsing logic
* x-vala.c (phase3_get): Factor out the buffer allocation as a
macro.

--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,10 @@
 2014-12-09  Daiki Ueno  <ueno@gnu.org>
 
+	* x-vala.c (phase3_get): Factor out the buffer allocation as a
+	macro.
+
+2014-12-09  Daiki Ueno  <ueno@gnu.org>
+
 	* read-desktop.c (desktop_lex): Undef the APPEND macro before
 	defining.
 
