--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,5 +1,10 @@
 2014-12-09  Daiki Ueno  <ueno@gnu.org>
 
+	* xgettext.c (arglist_parser_done): Avoid potential
+	null-dereference.  Spotted by clang-analyzer.
+
+2014-12-09  Daiki Ueno  <ueno@gnu.org>
+
 	* msgfmt.c (msgfmt_desktop_bulk): Don't dereference potentially
 	uninitialized value.  Spotted by clang-analyzer.
 
