--- a/gettext-tools/misc/ChangeLog
+++ b/gettext-tools/misc/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
+	* po-mode.el (po-mode-version-string): Bump to 0.23.
+
 2014-10-15  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.3 released.
