--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-10  Daiki Ueno  <ueno@gnu.org>
+
+	* msgl-check.c (check_header_entry): Don't declare unused variable
+	'nrequiredfields'.
+
 2014-12-09  Daiki Ueno  <ueno@gnu.org>
 
 	* xgettext.c (arglist_parser_done): Avoid potential
