--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-10  Daiki Ueno  <ueno@gnu.org>
+
+	* intl.m4, po.m4: Bump serial to avoid any conflict with Gnulib's
+	version after Gnulib commit 71be4c87.
+
 2014-12-03  Daiki Ueno  <ueno@gnu.org>
 
 	* extern-inline.m4, iconv.m4: Update from Gnulib.
