--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2014-12-12  Daiki Ueno  <ueno@gnu.org>
+
+	* format-lisp.c (make_intersected_list): Don't dereference
+	potentially released memory.  'append_repeated_to_initial' may
+	release the LIST->element.  Spotted by clang-analyzer.
+	* format-scheme.c (make_intersected_list): Likewise.
+
 2014-12-10  Daiki Ueno  <ueno@gnu.org>
 
 	* msgl-check.c (check_header_entry): Don't declare unused variable
