--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-12  Daiki Ueno  <ueno@gnu.org>
+
+	* format-lisp-2, format-scheme-2: Test type compatibility with
+	non-strict checking mode.
+
 2014-12-09  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-8-prg.c: Include <assert.h>.
