--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-16  Daiki Ueno  <ueno@gnu.org>
+
+	Backport iOS check from Gnulib
+	* lib/unistd.in.h.diff: Update.
+
 2014-12-15  Daiki Ueno  <ueno@gnu.org>
 
 	Work around interoperability with preinstalled libunistring
