sh: Fix handling of Bash ANSI-C quoting
* x-sh.c (read_word): Use phase1 instead of phase2 for Bash ANSI-C
escape sequences.  Also handle '\"' and '\E'.

--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-18  Daiki Ueno  <ueno@gnu.org>
+
+	* x-sh.c (read_word): Use phase1 instead of phase2 for Bash ANSI-C
+	escape sequences.  Also handle '\"' and '\E'.
+
 2014-12-17  Daiki Ueno  <ueno@gnu.org>
 
 	* x-sh.c (phase2_getc): Fix typo: debackslahificication ->
