--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
+	configure: Also distribute lzip-compressed tarballs
+	* configure.ac (AM_INIT_AUTOMAKE): Add dist-lzip.
+
 2014-12-16  Daiki Ueno  <ueno@gnu.org>
 
 	* m4/init-package-version.m4: Remove unused file.  The package
