--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,5 +1,9 @@
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.4 released.
+
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
 	* bg.po: Update from Roumen Petrov <transl@roumenpetrov.info>.
 	* ca.po: Update from Ivan Vilata i Balaguer <ivan@selidor.net>.
 	* de.po: Update from Mario Blättermann <mario.blaettermann@gmail.com>.
