--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.4 released.
+
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
 	configure: Also distribute lzip-compressed tarballs
 	* configure.ac (AM_INIT_AUTOMAKE): Add dist-lzip.
 
