--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,9 @@
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.4 released.
+
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
 	* libgnuintl.in.h (LIBINTL_VERSION): Bump to 0.19.4.
 	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 9:3:1.
 
