--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.4 released.
+
 2014-12-10  Daiki Ueno  <ueno@gnu.org>
 
 	* intl.m4, po.m4: Bump serial to avoid any conflict with Gnulib's
