--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,5 +1,9 @@
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.4 released.
+
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
 	* vi.po: Update from Trần Ngọc Quân <vnwildman@gmail.com>.
 
 2014-10-15  Daiki Ueno  <ueno@gnu.org>
