--- a/gettext-tools/ChangeLog
+++ b/gettext-tools/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.4 released.
+
 2014-12-04  Daiki Ueno  <ueno@gnu.org>
 
 	intl: Make the LCOV workaround non-intrusive
