--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.4 released.
+
 2014-12-01  Daiki Ueno  <ueno@gnu.org>
 
 	doc: Document placement of extracted comment blocks
