--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,5 +1,9 @@
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.4 released.
+
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
 	* po/bg.po: Update from Roumen Petrov <transl@roumenpetrov.info>.
 	* po/ca.po: Update from Ivan Vilata i Balaguer <ivan@selidor.net>.
 	* po/es.po: Update from Antonio Ceballos <aceballos@gmail.com>.
