--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,5 +1,9 @@
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext 0.19.4 released.
+
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
 	* gettext-po.in.h (LIBGETTEXTPO_VERSION): Bump to 0.19.4.
 	* Makefile.am (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 5:3:5.
 
