--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2014-12-24  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext 0.19.4 released.
+
 2014-12-17  Daiki Ueno  <ueno@gnu.org>
 
 	* xgettext-sh-3: Test Bash ANSI-C quoting.
