--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-04  Daiki Ueno  <ueno@gnu.org>
+
+	* THANKS: Update.
+
 2014-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* build-aux/texinfo.tex: Update to 2014-12-03.16.  Needed because
