--- a/THANKS
+++ b/THANKS
@@ -342,6 +342,7 @@ Tor Lillqvist           tml@iki.fi
 Trond Eivind Glomsrød   teg@redhat.com
 Uwe Ohse                uwe@tirka.gun.de
 Vaclav Haisman          V.Haisman@sh.cvut.cz
+Václav Slavík           vaclav@slavik.io
 Valery Beaud            valery.beaud@art.alcatel.fr
 Vera Mickael            vera.mickael@free.fr
 Veronica Loell          info@nakawe.se
