--- a/gettext-tools/doc/gettext.texi
+++ b/gettext-tools/doc/gettext.texi
@@ -439,6 +439,7 @@ Individual Programming Languages
 * GCC-source::                  GNU Compiler Collection sources
 * Lua::                         Lua
 * JavaScript::                  JavaScript
+* Vala::                        Vala
 
 sh - Shell Script
 
@@ -9434,6 +9435,7 @@ that language, and to combine the resulting files using @code{msgcat}.
 * GCC-source::                  GNU Compiler Collection sources
 * Lua::                         Lua
 * JavaScript::                  JavaScript
+* Vala::                        Vala
 @end menu
 
 @node C, sh, List of Programming Languages, List of Programming Languages
@@ -11956,7 +11958,7 @@ On platforms without gettext, the functions are not available.
 ---
 @end table
 
-@node JavaScript,  , Lua, List of Programming Languages
+@node JavaScript, Vala, Lua, List of Programming Languages
 @subsection JavaScript
 
 @table @asis
@@ -12008,6 +12010,60 @@ On platforms without gettext, the functions are not available.
 
 @item po-mode marking
 ---
+@end table
+
+@node Vala,  , JavaScript, List of Programming Languages
+@subsection Vala
+
+@table @asis
+@item RPMs
+vala
+
+@item File extension
+@code{vala}
+
+@item String syntax
+@itemize @bullet
+
+@item @code{"abc"}
+
+@item @code{"""abc"""}
+
+@end itemize
+
+@item gettext shorthand
+@code{_("abc")}
+
+@item gettext/ngettext functions
+@code{gettext}, @code{dgettext}, @code{dcgettext}, @code{ngettext},
+@code{dngettext}, @code{dpgettext}, @code{dpgettext2}
+
+@item textdomain
+@code{textdomain} function, defined under the @code{Intl} namespace
+
+@item bindtextdomain
+@code{bindtextdomain} function, defined under the @code{Intl} namespace
+
+@item setlocale
+Programmer must call @code{Intl.setlocale (LocaleCategory.ALL, "")}
+
+@item Prerequisite
+---
+
+@item Use or emulate GNU gettext
+Use
+
+@item Extractor
+@code{xgettext}
+
+@item Formatting with positions
+Same as for the C language.
+
+@item Portability
+autoconf (gettext.m4) and #if ENABLE_NLS
+
+@item po-mode marking
+yes
 @end table
 
 @c This is the template for new languages.
@@ -12369,19 +12425,19 @@ A copy of the license is included in @ref{GNU GPL}.
 @end menu
 
 @page
-@node GNU GPL
+@node GNU GPL, GNU LGPL, Licenses, Licenses
 @appendixsec GNU GENERAL PUBLIC LICENSE
 @cindex GPL, GNU General Public License
 @cindex License, GNU GPL
 @include gpl.texi
 @page
-@node GNU LGPL
+@node GNU LGPL, GNU FDL, GNU GPL, Licenses
 @appendixsec GNU LESSER GENERAL PUBLIC LICENSE
 @cindex LGPL, GNU Lesser General Public License
 @cindex License, GNU LGPL
 @include lgpl.texi
 @page
-@node GNU FDL
+@node GNU FDL,  , GNU LGPL, Licenses
 @appendixsec GNU Free Documentation License
 @cindex FDL, GNU Free Documentation License
 @cindex License, GNU FDL
