--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,19 @@
+2015-01-07  Daiki Ueno  <ueno@gnu.org>
+
+	examples: Make hello-c-gnome3 translator friendly
+	Suggested by Benno Schulenberg in:
+	<https://lists.gnu.org/archive/html/bug-gettext/2015-01/msg00003.html>.
+	* hello-c-gnome3/hello.gschema.xml: Use "use-markup" property
+	instead of "sensitive", to clarify the meaning of the extracted
+	strings.
+	* hello-c-gnome3/hello.c (HelloApplicationWindow): Rename the
+	"label2" member to "label".
+	(update_content): New function.
+	(clicked_callback): Rename from quit_callback and call
+	update_content instead of quitting.  All callers changed.
+	* hello-c-gnome3/hello.ui: Abolish the first label and put a
+	translatable text inside the button.
+
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.4 released.
