--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,53 @@
+2015-01-21  Will Newton  <will.newton@linaro.org>
+
+	intl: Merge from glibc
+	* bindtextdom.c: Update copyright to use year ranges.
+	* dcgettext.c: Update copyright to use year ranges.
+	[_LIBC]: Use libc_hidden_def instead of INTDEF.
+	* dcigettext.c: Update copyright to use year ranges.
+	Test HAVE_TSEARCH with #ifdef rather than #if.
+	(DCIGETTEXT) [_LIBC]: Use __current_locale_name instead of
+	_current_locale_name.
+	* dcngettext.c: Update copyright to use year ranges.
+	* dgettext.c: Update copyright to use year ranges.
+	[_LIBC]: Remove use of INTUSE macro.
+	* dngettext.c: Update copyright to use year ranges.
+	* explodename.c: Likewise.
+	* finddomain.c: Update copyright to use year ranges.
+	(_nl_finddomain_subfreeres): Use void in no-arguments function
+	definition.
+	* gettext.c: Update copyright to use year ranges.
+	[_LIBC]: Remove use of INTUSE macro.
+	* gettextP.h: Update copyright to use year ranges.
+	[_LIBC]: Forward declaration of struct loaded_domain.
+	* gmo.h: Update copyright to use year ranges.
+	* hash-string.c: Likewise.
+	* hash-string.h: Likewise.
+	* l10nflist.c: Update copyright to use year ranges.
+	[_LIBC]: Remove use of INTUSE macro.
+	Wrap pop function in [!ARCH_POP].
+	* loadinfo.h: Update copyright to use year ranges.
+	* loadmsgcat.c: Likewise.
+	* localealias.c: Update copyright to use year ranges.
+	Test ENABLE_RELOCATABLE with #ifdef rather than #if.
+	[_LIBC]: Use __strcasecmp_l for strcasecmp.
+	[_LIBC]: Use __fgets_unlocked for FGETS.
+	Test HAVE_DECL_FGETS_UNLOCKED with #ifdef rather than #if.
+	Test HAVE_DECL_FEOF_UNLOCKED with #ifdef rather than #if.
+	(read_alias_file) [_LIBC]: Open file with O_CLOEXEC.
+	(extend_alias_table): Use void in no-arguments function
+	definition.
+	* ngettext.c: Update copyright to use year ranges.
+	* plural-exp.c: Update copyright to use year ranges.
+	Test __APPLE_CC__ with #ifdef rather than #if.
+	(GERMANIC_PLURAL): Make const.
+	(init_germanic_plural): Use void in no-arguments function
+	definition.
+	* plural-exp.h: Update copyright to use year ranges.
+	(GERMANIC_PLURAL): Make const.
+	* plural.y: Update copyright to use year ranges.
+	* textdomain.c: Likewise.
+
 2015-01-04  Václav Slavík  <vaclav@slavik.io>  (tiny change)
 
 	intl: Add missing libintl.h dependency from pluralx.$lo
