--- a/THANKS
+++ b/THANKS
@@ -268,6 +268,7 @@ Pepa                    cerna.zelva@seznam.cz
 Perry Rapp              prapp@erols.com, lifelines_3_0_18@hotmail.com
 Perry Smith             pedz@easesoftware.com
 Peter Breitenlohner     peb@mppmu.mpg.de
+Peter Eisentraut        peter@eisentraut.org
 Pierre                  pierre42d@9online.fr
 Philipp Thomas          pthomas@suse.de
 Primoz Peterlin         primoz.peterlin@biofiz.mf.uni-lj.si
@@ -354,6 +355,7 @@ Werner Koch             wk@gnupg.org
 Werner Lemberg          wl@gnu.org
 Wesley J. Landaker      wjl@icecavern.net
 William J Poser         wjposer@ldc.upenn.edu
+Will Newton             will.newton@linaro.org
 Wojciech Polak          polak@gnu.org
 Xiong Jiang             jxiong@offtopic.org
 Yann Dirson             ydirson@altern.org
