--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,16 @@
+2015-01-22  Daiki Ueno  <ueno@gnu.org>
+
+	intl: Update from gnulib
+	* config.charset, localcharset.c, relocatable.c, vasnprintf.c:
+	Update from gnulib.
+	* codeset.m4, extern-inline.m4, fcntl-o.m4, gettext.m4, glibc2.m4:
+	* glibc21.m4, iconv.m4, intdiv0.m4, intldir.m4, intlmacosx.m4:
+	* intmax.m4, inttypes-pri.m4, inttypes_h.m4, lcmessage.m4, lock.m4:
+	* longlong.m4, nls.m4, printf-posix.m4, progtest.m4:
+	* size_max.m4, stdint_h.m4, threadlib.m4, uintmax_t.m4:
+	* visibility.m4, wchar_t.m4, wint_t.m4, xsize.m4: Update copyright
+	year.
+
 2015-01-21  Will Newton  <will.newton@linaro.org>
 
 	intl: Merge from glibc
