--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,7 @@
+2015-01-22  Daiki Ueno  <ueno@gnu.org>
+
+	* vasnprintf.c: Update copyright year.
+
 2014-12-24  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext 0.19.4 released.
