--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2015-01-23  Daiki Ueno  <ueno@gnu.org>
+
+	build: Update libtool files to 2.4.5
+	* m4/libtool.m4: Update from libtool-2.4.5, with modifications.
+	2008-04-06  Bruno Haible  <bruno@clisp.org>
+		* m4/libtool.m4 (LT_INIT): When setting LIBTOOL, use
+		CONFIG_SHELL; don't assume that the Makefile.in will set SHELL
+		to ${CONFIG_SHELL}.
+	* m4/ltoptions.m4: Likewise.
+	* m4/ltversion.m4: Likewise.
+	* build-aux/ltmain.sh: Likewise.
+
 2015-01-21  Daiki Ueno  <ueno@gnu.org>
 
 	* THANKS: Update.
